<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.zenandroid.greenfield.roadstatus.RoadStatusActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/roadTextEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Road ID"
        app:layout_constraintTop_toTopOf="@id/searchButton"
        app:layout_constraintBottom_toBottomOf="@id/searchButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/searchButton"
        android:layout_margin="16dp"
        />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:enabled="false"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/detailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Name: A2\nRoad Status: GOOD\nRoad Status Description: No delays"
            android:layout_margin="16dp"
            />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
